- fix glitches in "goto script" link pic sidebar - remove unneeded pic sidebar UI resource - ctrl-s from nouns and cases pane didn't work - compile error for duplicate script var names

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1322,21 +1322,7 @@ BEGIN
     PUSHBUTTON      "Crop",ID_CROPCOMMANDS,44,25,30,14
     LISTBOX         IDC_LISTCOMMANDS,7,44,103,226,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Copy",ID_EDIT_COPY,78,25,32,14
-    PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
-END
-
-IDD_PICCOMMANDS_VGA DIALOGEX 0, 0, 117, 277
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
-BEGIN
-    PUSHBUTTON      "Delete",ID_EDIT_DELETE,76,42,34,14
-    PUSHBUTTON      "Crop",ID_CROPCOMMANDS,44,42,30,14
-    LISTBOX         IDC_LISTCOMMANDS,7,60,103,99,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_STATIC2,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,178,103,87
-    PUSHBUTTON      "Copy",ID_EDIT_COPY,7,42,32,14
-    PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
-    PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,16,BS_ICON | BS_FLAT
-    PUSHBUTTON      "Set background",ID_EDIT_IMPORTPICBACKGROUND,44,25,66,14
+    PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_LEFT
 END
 
 IDD_DIALOGEMPTY DIALOGEX 0, 0, 129, 221
@@ -1796,9 +1782,9 @@ BEGIN
     LISTBOX         IDC_LISTCOMMANDS,7,74,103,85,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_STATIC2,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,183,103,87
     PUSHBUTTON      "Copy",ID_EDIT_COPY,7,56,32,14
-    PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
+    PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_LEFT
     PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,17,BS_ICON | BS_FLAT
-    PUSHBUTTON      "Set background",ID_EDIT_IMPORTPICBACKGROUND,44,25,66,14
+    PUSHBUTTON      "Set background",ID_EDIT_IMPORTPICBACKGROUND,7,24,66,14
     LISTBOX         IDC_LISTPOLYGONS,7,105,103,31,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOPOLYTYPE,44,90,66,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Type:",IDC_STATICPOLYTYPE,7,92,30,8
@@ -2415,15 +2401,6 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 110
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 270
-    END
-
-    IDD_PICCOMMANDS_VGA, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 110
-        VERTGUIDE, 44
         TOPMARGIN, 7
         BOTTOMMARGIN, 270
     END
