- doc updates (and final 2 tutorials)

--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -818,18 +818,22 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Plugins" "$(OutDir)Plugins"</Command>
     <Image Include="Docs\source\images\VPCScreens.jpg" />
     <Image Include="Docs\source\images\Waterfall.gif" />
     <Image Include="Docs\source\images\WordFind.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\BlueBoxInv.jpg" />
     <Image Include="Docs\source\Tutorial\tutimages\Box.jpg" />
     <Image Include="Docs\source\Tutorial\tutimages\BoxInInventory.png" />
     <Image Include="Docs\source\Tutorial\tutimages\BoxInRoom.png" />
     <Image Include="Docs\source\Tutorial\tutimages\BoxMessageGame.png" />
     <Image Include="Docs\source\Tutorial\tutimages\BoxMessageLook.jpg" />
     <Image Include="Docs\source\Tutorial\tutimages\ChooseWhitePri.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\ControlScreenPenState.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\DoorControl.png" />
     <Image Include="Docs\source\Tutorial\tutimages\DragPolygon.png" />
     <Image Include="Docs\source\Tutorial\tutimages\EgoMoved.png" />
     <Image Include="Docs\source\Tutorial\tutimages\EgoPainting.png" />
     <Image Include="Docs\source\Tutorial\tutimages\EvilEgo.jpg" />
     <Image Include="Docs\source\Tutorial\tutimages\EvilEgoMessages.png" />
     <Image Include="Docs\source\Tutorial\tutimages\EvilEgoRoom.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\ExtendPoly.png" />
     <Image Include="Docs\source\Tutorial\tutimages\FakeEgoBadPri.png" />
     <Image Include="Docs\source\Tutorial\tutimages\FakeEgoGoodPri.png" />
     <Image Include="Docs\source\Tutorial\tutimages\FillPri.png" />
@@ -843,11 +847,14 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Plugins" "$(OutDir)Plugins"</Command>
     <Image Include="Docs\source\Tutorial\tutimages\RedBoxInGame.png" />
     <Image Include="Docs\source\Tutorial\tutimages\RedBoxMessages.png" />
     <Image Include="Docs\source\Tutorial\tutimages\RedBoxPlaced.jpg" />
+    <Image Include="Docs\source\Tutorial\tutimages\Room2.png" />
     <Image Include="Docs\source\Tutorial\tutimages\RoomBackground.png" />
     <Image Include="Docs\source\Tutorial\tutimages\ShrinkingBox.jpg" />
+    <Image Include="Docs\source\Tutorial\tutimages\ThrowBox.png" />
     <Image Include="Docs\source\Tutorial\tutimages\TitleChange.png" />
     <Image Include="Docs\source\Tutorial\tutimages\TitleChangeImage.png" />
     <Image Include="Docs\source\Tutorial\tutimages\TitleScreenBackground.jpg" />
+    <Image Include="Docs\source\Tutorial\tutimages\UseBox.png" />
     <Image Include="Files\TemplateGame\SCI0.bmp" />
     <Image Include="Files\TemplateGame\SCI0\game.bmp" />
     <Image Include="Files\TemplateGame\SCI1.1.bmp" />
@@ -1212,8 +1219,11 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Plugins" "$(OutDir)Plugins"</Command>
     <None Include="Docs\source\Compiler\classheader.rst" />
     <None Include="Docs\source\Compiler\codeblock.rst" />
     <None Include="Docs\source\Compiler\comment.rst" />
+    <None Include="Docs\source\Compiler\cond.rst" />
     <None Include="Docs\source\Compiler\conditionalexpressions.rst" />
+    <None Include="Docs\source\Compiler\continue.rst" />
     <None Include="Docs\source\Compiler\define.rst" />
+    <None Include="Docs\source\Compiler\differences.rst" />
     <None Include="Docs\source\Compiler\do.rst" />
     <None Include="Docs\source\Compiler\for.rst" />
     <None Include="Docs\source\Compiler\if.rst" />
@@ -1222,14 +1232,18 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Plugins" "$(OutDir)Plugins"</Command>
     <None Include="Docs\source\Compiler\otheroperators.rst" />
     <None Include="Docs\source\Compiler\procedures.rst" />
     <None Include="Docs\source\Compiler\properties.rst" />
+    <None Include="Docs\source\Compiler\public.rst" />
     <None Include="Docs\source\Compiler\relationaloperators.rst" />
+    <None Include="Docs\source\Compiler\repeat.rst" />
     <None Include="Docs\source\Compiler\rest.rst" />
     <None Include="Docs\source\Compiler\return.rst" />
     <None Include="Docs\source\Compiler\saids.rst" />
     <None Include="Docs\source\Compiler\selectors.rst" />
+    <None Include="Docs\source\Compiler\selfsuper.rst" />
     <None Include="Docs\source\Compiler\sendselfsuper.rst" />
     <None Include="Docs\source\Compiler\strings.rst" />
     <None Include="Docs\source\Compiler\switch.rst" />
+    <None Include="Docs\source\Compiler\switchto.rst" />
     <None Include="Docs\source\Compiler\synonyms.rst" />
     <None Include="Docs\source\Compiler\use.rst" />
     <None Include="Docs\source\Compiler\variables.rst" />
@@ -1572,6 +1586,8 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Plugins" "$(OutDir)Plugins"</Command>
     <None Include="Docs\source\Tutorial\ManagingInventory.rst" />
     <None Include="Docs\source\Tutorial\PriorityScreen.rst" />
     <None Include="Docs\source\Tutorial\RoomBackground.rst" />
+    <None Include="Docs\source\Tutorial\Rooms.rst" />
+    <None Include="Docs\source\Tutorial\Score.rst" />
     <None Include="Docs\source\Tutorial\TitleScreen.rst" />
     <None Include="Docs\source\Tutorial\UseInventory.rst" />
     <None Include="Docs\source\undo.rst" />
