- improve syntax highlighting by including procedures and classes.

--- a/SCICompanion/Files/Customization/syntaxcolor.ini
+++ b/SCICompanion/Files/Customization/syntaxcolor.ini
@@ -15,6 +15,9 @@ String = f62d01             # orange
 InternalString = ff1a17     # red
 SelectorLiteral = 0ead9c    # cyan
 SaidString = c18000         # yellow
+Class = 008040              # aqua
+Instance = 008040           # aqua
+Procedure = 804000          # brown
 
 # rename this to Colors in order for the syntax highlighter to pick it up
 [DarkColorsScheme]
@@ -32,6 +35,9 @@ String = cb4b16             # orange
 InternalString = dc322f     # red
 SelectorLiteral = 2aa198    # cyan
 SaidString = b58900         # yellow
+Class = 008040              # aqua
+Instance = 008040           # aqua
+Procedure = 804000          # brown
 
 
 
