--- a/SCICompanion/SCICompanion.rc
+++ b/SCICompanion/SCICompanion.rc
@@ -64,8 +64,8 @@ END
 //
 
 VS_VERSION_INFO     VERSIONINFO
-  FILEVERSION       1,0,0,1
-  PRODUCTVERSION    1,0,0,1
+FILEVERSION       3, 0, 1, 2
+PRODUCTVERSION    3, 0, 1, 2
  FILEFLAGSMASK VS_FFI_FILEFLAGSMASK
 #ifdef _DEBUG
  FILEFLAGS VS_FF_DEBUG
@@ -82,12 +82,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "IceFall Games"
             VALUE "FileDescription", "SCICompanion"
-            VALUE "FileVersion",     "3.0.1.1"
+            VALUE "FileVersion",     "3.0.1.2"
             VALUE "InternalName",    "SCICompanion.exe"
             VALUE "LegalCopyright", "(c) IceFall Games.  All rights reserved."
             VALUE "OriginalFilename","SCICompanion.exe"
             VALUE "ProductName", "SCI Companion 3"
-            VALUE "ProductVersion",  "3.0.1.1"
+            VALUE "ProductVersion",  "3.0.1.2"
         END
     END
     BLOCK "VarFileInfo"
