- Fix bad bug where deleting a resource could clean out the resource map.

--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="TestCompile.cpp" />
     <ClCompile Include="TestPicDraw.cpp" />
     <ClCompile Include="TestResource.cpp" />
+    <ClCompile Include="TestResourceDelete.cpp" />
     <ClCompile Include="TestResourceLoad.cpp" />
   </ItemGroup>
   <ItemGroup>
