- fix mis-detection of wide exports (which generated corrupt export tables) - show this in the game version UI

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1479,8 +1479,8 @@ BEGIN
     CONTROL         "SCI 2.0",IDC_RADIOSCI10,"Button",BS_AUTORADIOBUTTON,23,153,40,10
     GROUPBOX        "Resource package fmt",IDC_STATIC6,7,98,87,69,WS_GROUP
     CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,204,53,8
-    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,230,69,10
-    CONTROL         "SCI1+ code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,203,54,10
+    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,229,69,10
+    CONTROL         "LOFSA absolute",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,203,67,10
     DEFPUSHBUTTON   "Reload game",IDOK,167,253,81,14
     COMBOBOX        IDC_COMBO1,206,57,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "View format",IDC_STATIC4,161,60,39,8
@@ -1509,6 +1509,7 @@ BEGIN
     RTEXT           "Default resolution",IDC_STATIC14,142,173,58,8
     COMBOBOX        IDC_COMBO9,206,187,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Kernel set",IDC_STATIC15,167,189,33,8
+    CONTROL         "Wide exports",IDC_CHECK14,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,242,59,10
 END
 
 IDD_DIALOGCHOOSECOLORVGA DIALOGEX 0, 0, 152, 152
